Prevent tabs from causing horizontal scroll
Using 100% width with padding will cause an element to grow larger than
its container.

At smaller browser widths this causes horizontal scrolling.

Use border-box so the padding is taken into account when calculating
the full width.

--- a/app/assets/stylesheets/frontend/helpers/_activity-nav.scss
+++ b/app/assets/stylesheets/frontend/helpers/_activity-nav.scss
@@ -4,6 +4,7 @@
   width: $full-width;
   margin: 0 ($gutter * -1 + 2px);
   padding: 0 ($gutter - 2px);
+  @include box-sizing(border-box);
 
   li {
     list-style: none;
